# trx

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: FLOWS.md
src/: config.rs  main.rs
src/managers/: apt.rs  arch.rs  brew.rs  mod.rs  pacman.rs  yay.rs
src/ui/: app.rs  draw.rs
trx-web/: README.md  package.json
trx-web/public/: install.sh
trx-web/src/app/: globals.css  landing-material.ts  layout.tsx  opengraph-image.tsx  page.tsx
trx-web/src/components/landing/: ButtonClickSound.tsx  Container.tsx  CopyIconButton.tsx  FeatureCard.tsx  GlitchHeading.tsx  HeroCurlInstall.tsx  HeroTerminal.tsx  HeroVideo.tsx  Label.tsx  LandingFooter.tsx  LandingHeader.tsx  MatrixRain.tsx  NavLink.tsx  PlatformBadge.tsx  ScrambleText.tsx  Step.tsx  StepFlowConnector.tsx  TrxLogo.tsx  animations.ts  demo-data.ts  icons.tsx  matrix-tokens.ts  motion-primitives.tsx  smooth-hash-nav.ts  tokens.ts
trx-web/src/styles/: matrix-theme.css
