[package]
name = "trx"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
ratatui = "0.29.0"
textwrap = "0.16.2"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.1.5"
tar = "0.4.44"
toml = "0.8"
directories = "5.0"
